--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     font-family: Arial;
     background-color: aliceblue;
     padding: 40px 0;
+    font-size: larger;
 }
 
 h2 {
@@ -23,7 +24,7 @@ span {
 
 .container {
     box-shadow: 0 0 20px gray;
-    width: 960px;
+    width: 1020px;
     margin: 0 auto;
     background-color: white;
 }
@@ -35,19 +36,25 @@ img {
 
 section,
 header {
-    padding: 10px 40px 20px 40px;
+    padding: 10px 50px 20px 50px;
 }
 
 header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding-top: 60px;
+    padding-top: 50px;
 }
 
 header ul {
     list-style: none;
 }
+
+header address {
+    font-style: normal;
+    font-weight: bold;
+}
+
 section ul {
     list-style: none;
 }
@@ -110,20 +117,27 @@ header li {
     color: gray;
     text-decoration: none;
     font-weight: bold;
+    transition: color 0.5s;
 }
+
+.company-name:hover {
+    color: cornflowerblue;
+}
+
 
 .cursor-icon {
     width: 16px;
     height: 16px;
-    vertical-align: top;
+    vertical-align: middle;
     margin-left: -5px;
 }
 
 .location-icon {
     width: 16px;
     height: 16px;
-    vertical-align: top;
+    vertical-align: middle;
     margin-left: 5px;
+    margin-right: -5px;
 }
 
 .location-name {
@@ -139,6 +153,52 @@ header li {
     width: 4px;
     height: 4px;
     vertical-align: middle;
-    margin-left: 30px;
+    margin-left: 50px;
     margin-right: 5px;
+}
+
+.university-icon {
+    width: 16px;
+    height: 16px;
+    vertical-align: top;
+    margin-left: 47px;
+    margin-right: -2px;
+}
+
+.faculty-name {
+    color: cornflowerblue;
+    font-weight: bold;
+}
+
+.university-name {
+    color: cornflowerblue;
+    font-weight: bold;
+    margin-left: 47px;
+}
+
+.diploma-topic {
+    font-weight: bold;
+    margin-left: 47px;
+}
+
+.diploma-topic-end {
+    margin-left: 47px;
+}
+
+.address-style-link {
+    color: black;
+    text-decoration: none;
+    transition: color 0.5s;
+}
+
+.address-style-link:hover {
+    color: cornflowerblue;
+}
+
+.address-cursor-icon {
+    width: 18px;
+    height: 18px;
+    vertical-align: middle;
+    margin-left: 1px;
+    margin-bottom: 5px;
 }
